[legacy] return profile settings
